slideshow.css
.slideshow
{
	margin-top: 2.5px;
}

#slide-wrapper
{
	width: 100%;
	height: 240px;
	position: relative;
}

#slide-wrapper .slide img
{
	width: 100%;
	height: 100%;
}

.slide
{
	width:100%;
	height: 100%;
	position: absolute;
	display: none;
}

.prev, .next {
	cursor: pointer;
	position: absolute;
	width: auto;
	padding: 15px;
	top: 87px;
	color: white;
	font-weight: bold;
	font-size: 18px;
	transition: 0.6s;
	border-radius: 0 3px 3px 0;
	outline: none;
}

.next {
	right: 0;
	border-radius: 3px 0 0 3px;
}

.prev:hover, .next:hover {
	background-color: rgba(116, 43, 140, 0.8);
}

.caption-text {
	background: rgba(0,0,0,0.4);
	color: #f2f2f2;
	font-size: 24px;
	position: absolute;
	padding-top: 5px;
	padding-bottom: 5px;
	bottom: 0px;
	width: 100%;
	text-align: center;
}

.dot {
	position: relative;
	left: 50%;
	cursor: pointer;
	transform: translateX(-45px);
	height: 15px;
	width: 15px;
	margin: 0 2px;
	background-color: #B99EC1;
	border-radius: 50%;
	display: inline-block;
	transition: background-color 0.6s ease;
	text-align: center;
}

.active, .dot:hover {
	background-color: #762c8e;
}

